# ARM_64-Android-Memory-Benching-Tools

./: CMakeLists.txt  README.md  bench_memory_aggregated_samples.cpp  bench_memory_periodic_samples.cpp  memory_instructions.h  memory_settings.h  run_aggregated.sh  run_periodic.sh
